--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,7 +41,7 @@ development = [
   "mypy>=1.3.0",
   "pip-tools>=6.13.0",
   "pre-commit>=3.3.2",
-  "pytest>=7.4.2",
+# "pytest>=7.4.2",
   "ruff>=0.0.269",
 ]
 
