--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -7,6 +7,6 @@ tasks:
 
 vscode:
   extensions:
-    - bungcip.better-toml
-    - ms-python.python
     - ms-python.black-formatter
+    - ms-python.python
+    - tamasfe.even-better-toml
